[gd_scene load_steps=12 format=2]

[ext_resource path="res://Img/BG_Pause.png" type="Texture" id=1]
[ext_resource path="res://Scene/ScreenDeath.gd" type="Script" id=2]
[ext_resource path="res://Img/Font/Titre.png" type="Texture" id=3]
[ext_resource path="res://Img/Coin.PNG" type="Texture" id=4]
[ext_resource path="res://Img/Score.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.701961, 0, 0.733333, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.447059, 0, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.956863, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.701961, 0, 0.733333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.447059, 0, 0.470588, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.956863, 0, 1, 1 )

[node name="ScreenDeath" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="BG_Pause" type="Sprite" parent="."]
modulate = Color( 1, 0.227451, 0.227451, 1 )
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Titre" type="Sprite" parent="."]
position = Vector2( 960, 104 )
scale = Vector2( 1.375, 1.375 )
texture = ExtResource( 3 )

[node name="BT_Menu" type="Button" parent="."]
margin_left = 768.0
margin_top = 512.0
margin_right = 1152.0
margin_bottom = 640.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "MENU PRINCIPAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BT_Quit" type="Button" parent="."]
margin_left = 768.0
margin_top = 768.0
margin_right = 1152.0
margin_bottom = 896.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "QUITTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Sprite" parent="."]
position = Vector2( 864.25, 224.25 )
scale = Vector2( 4.23333, 4.23333 )
texture = ExtResource( 5 )

[node name="Score" type="Label" parent="."]
margin_left = 960.0
margin_top = 192.0
margin_right = 1088.0
margin_bottom = 256.0
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="Label" parent="."]
margin_left = 960.0
margin_top = 320.0
margin_right = 1096.0
margin_bottom = 384.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 864.25, 352.25 )
scale = Vector2( 4.23333, 4.23333 )
texture = ExtResource( 4 )

[connection signal="pressed" from="BT_Menu" to="." method="_on_BT_Menu_pressed"]
[connection signal="pressed" from="BT_Quit" to="." method="_on_BT_Quit_pressed"]
